--- a/menudigital/style.css
+++ b/menudigital/style.css
@@ -1,2 +1,65 @@
-/*comment* #FFEDD5/
+/*comment */
+*{
+    margin:0;
+    padding: 0;
+}
 
+body {
+    background-color: #FFEDD5;
+    font-family: 'Roboto', sans-herif;
+}
+
+header{
+    padding: 32px 0;
+    text-align: center;
+}
+
+header h1 span{
+    color: #995000;
+}
+
+header h1{
+margin-bottom: 4px;
+}
+
+header, section{
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+section{
+    margin-bottom: 24px;
+}
+
+section h2{
+    background-color: #FED7AA;
+    padding:0px 16px;
+    text-align: center;
+    margin-bottom: 24px;
+}
+
+ul li{
+margin-bottom: 16px;
+display: flex;
+}
+
+.details{
+    color: rgba(0, 0, 0, 0.6);
+}
+
+li .details{
+    max-width: 240px;
+}
+
+.details h3{
+    margin-bottom:8px;
+}
+ul{
+    list-style: none;
+}
+
+h1, h2, h3, .price{
+    font-family: 'Roboto Serif', serif;
+    text-transform: uppercase;
+    color:#2D2C2A;
+}
