--- a/quizpage/style.css
+++ b/quizpage/style.css
@@ -34,7 +34,7 @@ p{
 
 div#home{
     margin-top:5rem;
-    width: min(50rem,100%);
+    width: min(75rem,100%);
     margin-inline: auto;
     padding-inline: 2.4rem;
     padding: 1rem;
@@ -66,17 +66,19 @@ p#desc{
 
 ul{
     font-size: 1.5rem;
-    list-style: upper-alpha;
+    list-style: disc;
 }
 
 li{
     border: 0.1rem solid rgb(116, 113, 113);
+    font-weight: bold;
     padding: 1rem;
+    list-style-position: inside;
 }
 
 li:hover{
     background-color: rgb(206, 198, 198);
-    font-weight: bold;
+    cursor: pointer;
 }
 
 button{
